third_party/rust/chromium_crates_io/vendor/cxx-1.0.115/tests/ui/wrong_type_id.stderr
error[E0271]: type mismatch resolving `<StringPiece as ExternType>::Id == (f, o, l, l, y, (), B, y, t, e, ..., ..., ..., ..., ...)`
  --> tests/ui/wrong_type_id.rs:11:14
   |
11 |         type ByteRange = crate::here::StringPiece;
   |              ^^^^^^^^^ expected a tuple with 15 elements, found one with 17 elements
   |
   = note: expected tuple `(f, o, l, l, y, (), B, y, t, e, R, a, n, g, e)`
              found tuple `(f, o, l, l, y, (), S, t, r, i, n, g, P, i, e, c, e)`
note: required by a bound in `verify_extern_type`
  --> src/extern_type.rs
   |
   | pub fn verify_extern_type<T: ExternType<Id = Id>, Id>() {}
   |                                         ^^^^^^^ required by this bound in `verify_extern_type`
