third_party/rust/chromium_crates_io/vendor/cxx-1.0.115/tests/ui/wrong_type_id.rs
#[cxx::bridge(namespace = "folly")]
mod here {
    extern "C++" {
        type StringPiece;
    }
}

#[cxx::bridge(namespace = "folly")]
mod there {
    extern "C++" {
        type ByteRange = crate::here::StringPiece;
    }
}

fn main() {}
